# bahamut-lib

./: .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  cubic.cpp  levelset_fluid.h  levelset_fluid2.cpp  levelset_fluid3.cpp  linear.cpp  loader_test.cpp  xmlEdit.cpp
app/app_levelset/: CMakeLists.txt  levelset_fluid.cpp  levelset_fluid.h  main.cpp  main3.cpp  marching.cpp  triangulate.cpp
app/dual_cubes/: CMakeLists.txt  dual2d.cpp
app/fluid_vis/: CMakeLists.txt  fluid_gui.hpp  fluid_vis.cpp
app/ui-test/: CMakeLists.txt  camera_test.cpp  hello.cpp  light.cpp  surface.cpp  texture.cpp
assets/: fragment_shader.frag  vertex_shader.vert
assets/3d_models/: cat.mtl  test.mtl
assets/3d_models/bridge/file/: untitled.3ds  untitled.mtl
assets/3d_models/hogwarts/: newcity.mtl
assets/shaders/: camera.vert  class.frag  class.vert  depth.frag  diffuse.frag  diffuse.vert  fragment_shader.frag  gouraud.frag  gouraud.vert  lamp.frag  lamp.vert  light.frag  light.vert  phong.frag  phong.vert  texture.frag  texture.vert  vertex_shader.vert
assets/simulations/: config.xml  config3.xml
blender/: load_obj_material.py
blender_scripts/: dualcubes.render.eevee.py  dualcubes.render.py  load_obj.py  load_obj_material.py  load_render.py  remove_doubles.py
carbuncle/: CMakeLists.txt
carbuncle/configs/: pls.xml
carbuncle/dualcubes/: CMakeLists.txt  dual_cubes.cpp  dual_cubes.h  dual_cubes2.cpp  dual_cubes3.cpp  extract.cpp  initialization.hpp  levelset_from_mesh.hpp  main.cpp  main2d.cpp  main_fuseParticles.cpp  main_normalParticles.cpp  main_tangentParticles.cpp  normal_particles2.cpp  normal_particles2.hpp  tangent_particles2.cpp  tangent_particles2.hpp  tangent_particles3.hpp
carbuncle/enright/: CMakeLists.txt  file_reader.hpp  initializer.hpp  main.cpp  plevelset.hpp
carbuncle/garuda_window/: CMakeLists.txt  garuda_window.cpp  nanogui_test.cpp
carbuncle/heat_kernel/: CMakeLists.txt  main.cpp
carbuncle/levelset/: CMakeLists.txt  cip.cpp  cip2d.cpp  cip3d.cpp  data_interp.cpp  redistance1.cpp  redistance2.cpp
carbuncle/normal_advection/: CMakeLists.txt  level_set_reader.cpp  level_set_reader.hpp  main.cpp  normal_geometry.hpp  normal_particles.cpp  normal_particles.hpp
carbuncle/particles/: CMakeLists.txt  deform3d.cpp  deformation.cpp  plevelset2.cpp  psystem2.cpp  rigid3d.cpp  run_from_config.cpp
carbuncle/weno/: CMakeLists.txt  advection1d.cpp  advection2d.cpp  rotation2d.cpp  rotation2d_cp.cpp  weno2d.cpp  wenodifferences.cpp  wenomain.cpp
garuda/: CMakeLists.txt
garuda/garuda/: CMakeLists.txt
garuda/garuda/graphics/: camera.cpp  camera.hpp  light.cpp  light.hpp  mesh_object.cpp  mesh_object.hpp  particles_object.cpp  particles_object.hpp  scene.cpp  scene.hpp  scene_object.cpp  scene_object.hpp  spotlight.cpp  triangle_mesh.cpp  triangle_mesh.hpp
garuda/garuda/gui/: event_handler.cpp  event_handler.hpp  events.cpp  events.hpp  gui.cpp  gui.h  gui.hpp  window.cpp  window.hpp
garuda/garuda/shader/: material.cpp  material.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
garuda/garuda/utils/: OBJ_loader.hpp  callbacks.cpp  callbacks.hpp  geometry.hpp  mesh_reader.cpp  mesh_reader.hpp  stb_image.cpp
leviathan/: CMakeLists.txt
leviathan/fluids/: levelset_fluid2.cpp  levelset_fluid2.h  levelset_fluid3.cpp  levelset_fluid3.h  particle_levelset2.cpp  particle_levelset2.h  particle_levelset3.cpp  particle_levelset3.h
leviathan/surface/: dual_cubes.cpp  dual_cubes.h  dual_squares.cpp  dual_squares.h
matlab/: L.txt  Starting loop.ps  b.txt  cip_1d_plot.m  cip_2d_plot.m  cip_3d_plot.m  compare_3d_p1_p2.m  compare_p1_p2.m  distance_to_segment.m  generat_mesh.m  heat.txt  levelset.txt  levelsetplot.m  levelsetplot3.m  particle_plot.m  particle_plot3.m  particles.txt  print_sdf_gradients.m  read_obj.m  read_sdf.m  redistance_1d_plot.m  redistance_2d_plot.m  redistance_matlab.m  redistance_matlab2.m  showpressure.m  showvelocity.m  statistics.m  weno_1d_plot.m  weno_2d_plot.m  weno_3d_plot.m  weno_plot.m
moogle/: dual_cubes.py  dual_squares.py  enright_statistics.py  fix_obj_normals.py
python/: catmull_rom.py
ramuh/: CMakeLists.txt
ramuh/blas/: grid_heat_kernel.cpp  grid_heat_kernel.h  heat_kernel.cpp  heat_kernel.h  interpolator.cpp  interpolator.h  weno.cpp  weno.h
ramuh/geometry/: bounding_box.cpp  bounding_box.h  bounding_box2.cpp  bounding_box3.cpp  dual_marching.h  dual_marching2.cpp  dual_marching3.cpp  geometry_utils.cpp  geometry_utils.h  matrix.h  matrix.inl  vector2.h  vector3.h
ramuh/ramuh/: CMakeLists.txt
ramuh/ramuh/structures/: grid.cpp  grid.h  levelset.cpp  levelset.h  vector3.h
ramuh/ramuh/utils/: macros.h  material.h
ramuh/structures/: cell_centered_grid1.cpp  cell_centered_grid1.h  cell_centered_grid2.cpp  cell_centered_grid2.h  cell_centered_grid3.cpp  cell_centered_grid3.h  dual_cubes.h  dual_cubes2.cpp  dual_cubes3.cpp  grid.cpp  grid.h  grid2.cpp  grid2.h  grid3.cpp  grid3.h  levelset.cpp  levelset.h  levelset2.cpp  levelset2.h  levelset3.cpp  levelset3.h  line_mesh.cpp  line_mesh.hpp  mac_grid1.cpp  mac_grid1.h  mac_grid2.cpp  mac_grid2.h  mac_grid3.cpp  mac_grid3.h  mesh_model.cpp  mesh_model.h  particle_system2.cpp  particle_system2.h  particle_system3.cpp  particle_system3.h  triangle_mesh.cpp  triangle_mesh.h
ramuh/utils/: exception.cpp  exception.hpp  file_writer.cpp  file_writer.h  log.cpp  log.hpp  material.h  obj_reader.cpp  obj_reader.hpp  statistics.cpp  statistics.hpp  timer.cpp  timer.hpp
